# pdf-editor

./: README.md  app.py  main.py  merge.py  pyproject.toml
core/: gui_merge.py  gui_reorder.py  merge.py  reorder.py
